<resources>
    <string name="app_name">S2-RecyclerView</string>
    <string name="tv_nom">NOM</string>
    <string name="tv_prenoms">PRENOMS</string>
    <string name="tv_commune">COMMUNE</string>
    <string name="btn_save">Enregistrer</string>
    <string name="title">FORMULAIRE PERSONNES</string>
    <string name="btn_cancel">Annuler</string>
    <string name="tv_filiere">FILIERE</string>
    <string name="btn_show_all">SHOW ALL DATA</string>
</resources>
