<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sqlite.SqliteActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_nom"
                android:textSize="@dimen/my_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_nom_eleve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/my_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_prenoms"
                android:textSize="@dimen/my_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_prenoms_eleve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_commune"
                android:textSize="@dimen/my_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_commune_eleve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/my_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_filiere"
                android:textSize="@dimen/my_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_filiere_eleve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/my_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_ajouter_eleve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/btn_save"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btn_show_all_eleve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/btn_show_all"
                android:textColor="@android:color/background_light" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>